--- a/src/App.module.css
+++ b/src/App.module.css
@@ -51,6 +51,17 @@
   text-align: center;
 }
 
+.info {
+  background: #D1D1D1;
+  border: 1px solid #333;
+  font-weight: bold;
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 8px;
+  text-align: center;
+}
+
 .formTitle {
   font-size: 1.1em;
   font-weight: bold;
